--- a/public/article-template-how-to/index.html
+++ b/public/article-template-how-to/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en-us">
-<head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
+<head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,10 +8,10 @@
 	<meta name="description" content="this is may&#39;s blog and it uses minimal energy!">
 	<meta name="author" content="May Freigang">
 
-	<link rel="icon" href="http://localhost:1313/icons/sun.svg">
+	<link rel="icon" href="https://mfreig.github.io/icons/sun.svg">
 
 	
-	<link rel="stylesheet" href="http://localhost:1313/css/style.css"><meta property="og:title" content="Article Template: How to write articles and translations in Markdown for Hugo?" />
+	<link rel="stylesheet" href="https://mfreig.github.io/css/style.css"><meta property="og:title" content="Article Template: How to write articles and translations in Markdown for Hugo?" />
 <meta name="twitter:title" content="Article Template: How to write articles and translations in Markdown for Hugo?"/>
 
 <meta property="og:description" content="This page goes over the specific markdown syntax that should be used to write articles, add translations and comments in the new hugo solar web." />
@@ -19,15 +19,15 @@
 <meta name="twitter:description" content="This page goes over the specific markdown syntax that should be used to write articles, add translations and comments in the new hugo solar web."/>
 
 <meta property="og:type" content="article" />
-<meta property="og:url" content="http://localhost:1313/article-template-how-to/" />
+<meta property="og:url" content="https://mfreig.github.io/article-template-how-to/" />
 
 
 
-<meta property="og:image" itemprop="image" content="http://localhost:1313/article-template-how-to/images/dithers/image_dithered.png" />
-<meta property="og:image:secure_url" content="http://localhost:1313/article-template-how-to/images/dithers/image_dithered.png" />
+<meta property="og:image" itemprop="image" content="https://mfreig.github.io/article-template-how-to/images/dithers/image_dithered.png" />
+<meta property="og:image:secure_url" content="https://mfreig.github.io/article-template-how-to/images/dithers/image_dithered.png" />
 <meta property="og:image:type" content="image/png">
 <meta name="twitter:card" content="summary_large_image"/>
-<meta name="twitter:image" content="http://localhost:1313/article-template-how-to/images/dithers/image_dithered.png"/>
+<meta name="twitter:image" content="https://mfreig.github.io/article-template-how-to/images/dithers/image_dithered.png"/>
 
 <meta property="article:section" content="" />
 
@@ -43,9 +43,9 @@
 <body id="article-template-how-to-write-articles-and-translations-in-markdown-for-hugo">
 	
 	<header class="site-header">
-  <h1><a id="top" href="http://localhost:1313/">blog it like it&#39;s 2005</a></h1>
+  <h1><a id="top" href="https://mfreig.github.io/">blog it like it&#39;s 2005</a></h1>
   <div class="subtitle">
-     <a href="http://localhost:1313/power">this is may&#39;s blog and it uses minimal energy!      
+     <a href="https://mfreig.github.io/power">this is may&#39;s blog and it uses minimal energy!      
     </a>
   </div>
   <nav id="menu">
@@ -445,6 +445,6 @@ The file should start with the following lines:</p>
     </div>
 </footer>
 
-	<script src="http://localhost:1313/js/script.js"></script>
+	<script src="https://mfreig.github.io/js/script.js"></script>
 </body>
 </html>
