--- a/public/privacy/index.html
+++ b/public/privacy/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en-us">
-<head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
+<head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,10 +8,10 @@
 	<meta name="description" content="this is may&#39;s blog and it uses minimal energy!">
 	<meta name="author" content="May Freigang">
 
-	<link rel="icon" href="http://localhost:1313/icons/sun.svg">
+	<link rel="icon" href="https://mfreig.github.io/icons/sun.svg">
 
 	
-	<link rel="stylesheet" href="http://localhost:1313/css/style.css"><meta property="og:title" content="Privacy" />
+	<link rel="stylesheet" href="https://mfreig.github.io/css/style.css"><meta property="og:title" content="Privacy" />
 <meta name="twitter:title" content="Privacy"/>
 
 <meta property="og:description" content="This website does not use cookies, advertising services, or tracking codes. We collect server logs to understand traffic on the server. This information is viewed only by us and is not used to make user profiles." />
@@ -19,10 +19,10 @@
 <meta name="twitter:description" content="This website does not use cookies, advertising services, or tracking codes. We collect server logs to understand traffic on the server. This information is viewed only by us and is not used to make user profiles."/>
 
 <meta property="og:type" content="article" />
-<meta property="og:url" content="http://localhost:1313/privacy/" />
+<meta property="og:url" content="https://mfreig.github.io/privacy/" />
 
-<meta property="og:image" content="http://localhost:1313/icons/sun.svg" />
-<meta property="og:image:secure_url" content="http://localhost:1313/icons/sun.svg" />
+<meta property="og:image" content="https://mfreig.github.io/icons/sun.svg" />
+<meta property="og:image:secure_url" content="https://mfreig.github.io/icons/sun.svg" />
 <meta property="og:image:type" content="image/svg+xml">
 <meta property="og:image:width" content="300" />
 <meta property="og:image:height" content="300" />
@@ -38,9 +38,9 @@
 <body id="privacy">
 	
 	<header class="site-header">
-  <h1><a id="top" href="http://localhost:1313/">blog it like it&#39;s 2005</a></h1>
+  <h1><a id="top" href="https://mfreig.github.io/">blog it like it&#39;s 2005</a></h1>
   <div class="subtitle">
-     <a href="http://localhost:1313/power">this is may&#39;s blog and it uses minimal energy!      
+     <a href="https://mfreig.github.io/power">this is may&#39;s blog and it uses minimal energy!      
     </a>
   </div>
   <nav id="menu">
@@ -165,6 +165,6 @@ Chrome/65.0.3325.183 Safari/537.36 Vivaldi/1.96.1147.55&rdquo;</p>
     </div>
 </footer>
 
-	<script src="http://localhost:1313/js/script.js"></script>
+	<script src="https://mfreig.github.io/js/script.js"></script>
 </body>
 </html>
