--- a/public/rss/index.html
+++ b/public/rss/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en-us">
   <head>
-    <title>http://localhost:1313/feeds/</title>
-    <link rel="canonical" href="http://localhost:1313/feeds/">
+    <title>https://mfreig.github.io/feeds/</title>
+    <link rel="canonical" href="https://mfreig.github.io/feeds/">
     <meta name="robots" content="noindex">
     <meta charset="utf-8">
-    <meta http-equiv="refresh" content="0; url=http://localhost:1313/feeds/">
+    <meta http-equiv="refresh" content="0; url=https://mfreig.github.io/feeds/">
   </head>
 </html>
