--- a/public/_index.it/index.html
+++ b/public/_index.it/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en-us">
-<head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
+<head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,10 +8,10 @@
 	<meta name="description" content="this is may&#39;s blog and it uses minimal energy!">
 	<meta name="author" content="May Freigang">
 
-	<link rel="icon" href="http://localhost:1313/icons/sun.svg">
+	<link rel="icon" href="https://mfreig.github.io/icons/sun.svg">
 
 	
-	<link rel="stylesheet" href="http://localhost:1313/css/style.css"><meta property="og:title" content="" />
+	<link rel="stylesheet" href="https://mfreig.github.io/css/style.css"><meta property="og:title" content="" />
 <meta name="twitter:title" content=""/>
 
 <meta property="og:description" content="" />
@@ -19,10 +19,10 @@
 <meta name="twitter:description" content=""/>
 
 <meta property="og:type" content="article" />
-<meta property="og:url" content="http://localhost:1313/_index.it/" />
+<meta property="og:url" content="https://mfreig.github.io/_index.it/" />
 
-<meta property="og:image" content="http://localhost:1313/icons/sun.svg" />
-<meta property="og:image:secure_url" content="http://localhost:1313/icons/sun.svg" />
+<meta property="og:image" content="https://mfreig.github.io/icons/sun.svg" />
+<meta property="og:image:secure_url" content="https://mfreig.github.io/icons/sun.svg" />
 <meta property="og:image:type" content="image/svg+xml">
 <meta property="og:image:width" content="300" />
 <meta property="og:image:height" content="300" />
@@ -38,9 +38,9 @@
 <body id="">
 	
 	<header class="site-header">
-  <h1><a id="top" href="http://localhost:1313/">blog it like it&#39;s 2005</a></h1>
+  <h1><a id="top" href="https://mfreig.github.io/">blog it like it&#39;s 2005</a></h1>
   <div class="subtitle">
-     <a href="http://localhost:1313/power">this is may&#39;s blog and it uses minimal energy!      
+     <a href="https://mfreig.github.io/power">this is may&#39;s blog and it uses minimal energy!      
     </a>
   </div>
   <nav id="menu">
@@ -149,6 +149,6 @@
     </div>
 </footer>
 
-	<script src="http://localhost:1313/js/script.js"></script>
+	<script src="https://mfreig.github.io/js/script.js"></script>
 </body>
 </html>
