--- a/public/power/index.html
+++ b/public/power/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en-us">
-<head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
+<head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,10 +8,10 @@
 	<meta name="description" content="this is may&#39;s blog and it uses minimal energy!">
 	<meta name="author" content="May Freigang">
 
-	<link rel="icon" href="http://localhost:1313/icons/sun.svg">
+	<link rel="icon" href="https://mfreig.github.io/icons/sun.svg">
 
 	
-	<link rel="stylesheet" href="http://localhost:1313/css/style.css"><meta property="og:title" content="Power" />
+	<link rel="stylesheet" href="https://mfreig.github.io/css/style.css"><meta property="og:title" content="Power" />
 <meta name="twitter:title" content="Power"/>
 
 <meta property="og:description" content="I made this website using Hugo and the Solar v2 Theme by Low Tech Magazine. It uses a minimal amount of energy." />
@@ -19,15 +19,15 @@
 <meta name="twitter:description" content="I made this website using Hugo and the Solar v2 Theme by Low Tech Magazine. It uses a minimal amount of energy."/>
 
 <meta property="og:type" content="article" />
-<meta property="og:url" content="http://localhost:1313/power/" />
+<meta property="og:url" content="https://mfreig.github.io/power/" />
 
 
 
-<meta property="og:image" itemprop="image" content="http://localhost:1313/power/images/dithers/solar-powered-server-weather-2_dithered.png" />
-<meta property="og:image:secure_url" content="http://localhost:1313/power/images/dithers/solar-powered-server-weather-2_dithered.png" />
+<meta property="og:image" itemprop="image" content="https://mfreig.github.io/power/images/dithers/solar-powered-server-weather-2_dithered.png" />
+<meta property="og:image:secure_url" content="https://mfreig.github.io/power/images/dithers/solar-powered-server-weather-2_dithered.png" />
 <meta property="og:image:type" content="image/png">
 <meta name="twitter:card" content="summary_large_image"/>
-<meta name="twitter:image" content="http://localhost:1313/power/images/dithers/solar-powered-server-weather-2_dithered.png"/>
+<meta name="twitter:image" content="https://mfreig.github.io/power/images/dithers/solar-powered-server-weather-2_dithered.png"/>
 
 <meta property="article:section" content="" />
 
@@ -42,9 +42,9 @@
 <body id="power">
 	
 	<header class="site-header">
-  <h1><a id="top" href="http://localhost:1313/">blog it like it&#39;s 2005</a></h1>
+  <h1><a id="top" href="https://mfreig.github.io/">blog it like it&#39;s 2005</a></h1>
   <div class="subtitle">
-     <a href="http://localhost:1313/power">this is may&#39;s blog and it uses minimal energy!      
+     <a href="https://mfreig.github.io/power">this is may&#39;s blog and it uses minimal energy!      
     </a>
   </div>
   <nav id="menu">
@@ -151,6 +151,6 @@
     </div>
 </footer>
 
-	<script src="http://localhost:1313/js/script.js"></script>
+	<script src="https://mfreig.github.io/js/script.js"></script>
 </body>
 </html>
